Checkboxes for single items

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>College Move In</title>
+  <script src="http://zeptojs.com/zepto.min.js"></script>
+  <script src="https://github.com/dwyl/range-touch/blob/master/range-touch.min.js"></script>
 </head>
 
 <body>
